cabal-version: >= 1.10

name: epsilon
version: 0.2021.8.25
synopsis: A GHC plugin to derive instances.
description: Epsilon is a GHC plugin to derive instances.

build-type: Simple
category: Plugin
license-file: LICENSE.txt
license: MIT
maintainer: ACI Learning

library
  build-depends:
    base >= 4.14.1 && < 4.15
    , ghc >= 8.10.4 && < 8.11
    , random >= 1.2.0 && < 1.3
  default-language: Haskell2010
  exposed-modules:
    Epsilon
    Epsilon.Constant.Module
    Epsilon.Generator.Arbitrary
    Epsilon.Generator.Common
    Epsilon.Generator.FromJSON
    Epsilon.Generator.ToJSON
    Epsilon.Generator.ToSchema
    Epsilon.Hs
    Epsilon.Hsc
    Epsilon.Options
    Epsilon.Type.Config
    Epsilon.Type.Constructor
    Epsilon.Type.Field
    Epsilon.Type.Flag
    Epsilon.Type.Type
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: src/lib
  other-modules: Paths_epsilon

test-suite test
  build-depends:
    base
    , aeson
    , epsilon
    , HUnit >= 1.6.2 && < 1.7
    , insert-ordered-containers >= 0.2.5 && < 0.3
    , lens >= 4.19.2 && < 4.20
    , QuickCheck >= 2.14.2 && < 2.15
    , swagger2 >= 2.6 && < 2.7
    , text >= 1.2.4 && < 1.3
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
